--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,7 +36,7 @@
 
 /* job previews / list */
 
-.job-list {
+.property-list {
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -44,7 +44,7 @@
   background-color: #f9f9f9;
 }
 
-.job-preview {
+.property-preview {
   padding: 15px;
   border: 1px solid #ddd;
   border-radius: 5px;
@@ -57,22 +57,22 @@
   box-shadow: 1px 3px 5px rgba(41, 20, 156, 0.1);
 }
 
-.job-preview h2 {
+.property-preview h2 {
   margin: 0 0 10px;
   font-size: 1.5em;
   color: #f1356d;
 }
 
-.job-preview p {
+.property-preview p {
   margin: 5px 0;
   color: #666;
 }
 
-.job-preview p span {
+.property-preview p span {
   font-weight: bold;
 }
 
-.job-preview a{
+.property-preview a{
   text-decoration: none;
 }
 
@@ -126,7 +126,7 @@
   cursor: pointer;
 }
 
-.job-preview button {
+.property-preview button {
   margin: 5px; /* Adds space around the buttons */
   border: 1px solid #f1356d; /* Adds a black border */
   padding: 10px; /* Adds padding inside the buttons */
